
Version 0.3.5dev (TBA)
======================

New features:
  
  * CTags support
  * Project-wide autocomplete
  * Double click respects word boundaries
  * Window title reflects project name
  * Duplicate region command
  * Switch tab with Alt-1, Alt-2 (or Cmd-1, Cmd-2 on OSX)
  * Prompts to save modified tabs on tab, window or application close
  * Snippet menus show tab trigger more nicely (linux/windows)
  * Watches to changes to open files, and prompts to revert
  * Project view sorts directories before files (by popular request!)
  * Shows menu bar on OSX when there are no windows open
  * Halve startup time from 0.3.4 (warm startup)
  * Added background Task APIs.
  * Task Manager
  
Fixes:

  * Fix delete at end of line when using "\r\n" delimiter
  * Increase and decrease indent commands respect soft tabs and tab width settings
  * Directory tree sorts correctly
  * Speed up opening a project (about 1s faster)
  
New contributors:

  * Antono Vasiljev
  * Sergey Potapov
  * Kirill Nikitin
  * Juozas Gaigalas

Version 0.3.4dev (7 Mar 2010)
=============================

New features:

  * Auto-pairer inserts matching characters ( -> ), " -> ", etc
  * Snippets
  * Recent directories menu
  * Uses Gecko for HTMLTabs on Windows.
  
Internal changes:

  * New API for creating text Marks, to tag a position in a Document.
  * new PersistentCache class for plugins to simply cache stuff.
  * Textmate plugin for dealing with Textmate bundles.
  * Application focus in/out events.
  
Fixes:

  * Respects Windows style line delimiters
  
New contributors:

  * Aaron McLeod

Version 0.3.3dev (21 Feb 2010)
==============================

New features:

  * Tab stops:
    - Can set tab width for open tab.
    - Default tab width is remembered per language.
    - Soft tabs (spaces that behave like tabs).
    - Default soft/hard option is remembered per language.
  * FindFileDialog:
     - opens with a list of files opened this session.