@@ -22,24 +22,14 @@ module Redcar
           result = @command_instance.execute
         rescue Object => e
           @command_instance.error = e
-          log_error
         rescue java.lang.StackOverflowError => e
           @command_instance.error = e
-          log_error
         end
         record
         result
       end
       
       private
-      
-      def log_error
-        logger.error "* Error in command #{@command_instance.class}"
-        if @command_instance.error.respond_to?(:backtrace)
-          logger.error "  " + @command_instance.error.message.to_s
-          @command_instance.error.backtrace.each {|l| logger.error("  " + l) }
-        end
-      end
       
       def record
         if Redcar.app.history
